[gd_scene load_steps=8 format=3 uid="uid://c6vb77ybjdb40"]

[ext_resource type="Script" path="res://scenes/enemy/watcher.gd" id="1_2b5jh"]
[ext_resource type="Texture2D" uid="uid://c3vi5jehu8jh0" path="res://place holders/assets/enemy.png" id="1_poo6h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jq1u2"]

[sub_resource type="Animation" id="Animation_i44he"]
resource_name = "eyes"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Watch_area/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Watch_area/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_vrix3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Watch_area/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Watch_area/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fk8x4"]
_data = {
"RESET": SubResource("Animation_vrix3"),
"eyes": SubResource("Animation_i44he")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3bfgp"]
size = Vector2(197.171, 82.304)

[node name="Watcher" type="CharacterBody2D"]
script = ExtResource("1_2b5jh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.166667, 0.215054)
texture = ExtResource("1_poo6h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jq1u2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fk8x4")
}

[node name="Watch_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="ColorRect" type="ColorRect" parent="Watch_area"]
offset_left = 16.0
offset_top = -129.0
offset_right = 628.0
offset_bottom = 129.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Watch_area"]
position = Vector2(323.227, 1.0151e-05)
rotation = 1.5708
scale = Vector2(1.31865, -7.45464)
shape = SubResource("RectangleShape2D_3bfgp")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Watch_area" to="." method="_on_watch_area_area_entered"]
[connection signal="body_entered" from="Watch_area" to="." method="_on_watch_area_body_entered"]
[connection signal="body_exited" from="Watch_area" to="." method="_on_watch_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
